<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
     />

    <Button
        android:id="@+id/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/button_message" />

    <EditText
        android:id="@+id/myedittext"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:hint="@string/hinttext"
        android:text="@string/editmessage" />

    <CheckBox
        android:id="@+id/mycheckbox"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:text="@string/checkbox" />

    <Switch
        android:id="@+id/myswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchmessage" />

    <RadioButton
        android:id="@+id/myradio"
        android:layout_width="306dp"
        android:layout_height="76dp"
        android:text="@string/radiomessage" />
    <ImageView
        android:id="@+id/mylogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_algonquin"/>

    <ImageButton
        android:id="@+id/myimagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_algonquin" />
</LinearLayout>